--- a/blog/templates/categoria/buscar.html
+++ b/blog/templates/categoria/buscar.html
@@ -140,10 +140,10 @@ Buscando por Categoría
             </nav>
         </div>
         {% else %}
-        <div class="card lista_categorias">
+        <div class="card lista_autores m-0 py-0 px-0 ">
             <div class="card-header">Buscador de Categorías</div>
             <div class="card-body">
-                <p>No existen Categorías registradas</p>
+                <p>No existen Reseñas registradas para la categoría {{ categoria.nombre }}</p>
             </div>
         </div>
         {% endif%}
