--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <!-- <link href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'assets/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet"> -->
+    <link href="{% static 'assets/css/sweetalert2.min.css' %}" rel="stylesheet">
     <link href="{% static 'assets/css/estilos.css' %}" rel="stylesheet">
     <title>Administración Nakamura - Clientes</title>
     <meta name="description" content="Administración de Consorcios, Condominios y Barrios Privados.">
@@ -129,35 +130,7 @@
     </header>
 
     <main>
-        {% if messages %}
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script>
-            $(document).ready(function(){
-                $("#myModal").modal('show');
-            });
-        </script>
-        {% for message in messages %}
-        <div class="modal fade" id="myModal">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header  bg-{{ message.tags }}">
-                        <h5 class="modal-title text-light">Mensaje del sistema</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <p>{{ message }}</p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                    </div>
-                </div>
-            </div>
-            {% endfor %}
-        </div>
-
-
-        {% endif %}
         <section id="inicio">
             <div class="container  mt-4">
                 <div class="row">
@@ -412,14 +385,29 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
-        
+
     <script src="{% static 'assets/vendor/ckeditor5/ckeditor.js' %}"></script>
     <script src="{% static 'assets/vendor/ckeditor5/ckeditor-init.js' %}"></script>
     <script src="{% static 'assets/vendor/ckeditor5/es.js' %}"></script>
 
     <!-- Template Main JS File -->
     <script src="{% static 'assets/js/main.js' %}"></script>
-
+    <script src="{% static 'assets/js/sweetalert2.all.min.js' %}"></script>
+    {% if messages %}
+    {% for message in messages %}
+    <script>
+        Swal.fire({
+            title: '¿Mensaje del Sistema?',
+            text: '{{ message }}',
+            icon: 'success',
+            confirmButtonColor: '#dc3545'
+        })
+    </script>
+    {% endfor %}
+    </div>
+    {% endif %}
+    {% block extrajs %}
+    {% endblock extrajs %}
 </body>
 
 </html>
